fixed nabar alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,6 +21,11 @@ $info-box-font-size: 15px;
     
 }
 
+.navbar-nav{
+
+    padding-right: 142px;
+}
+
 .nav-link{
     text-decoration: none;
 }
